Se modifico header del archivo index.html
Se actualizo la etiqueta header para hacerla funcional a responsive segun las dimensiones del dispositivo.

--- a/index.html
+++ b/index.html
@@ -19,12 +19,16 @@
 </head>
 <body>
     <header>
-        <div class="containerHeader">
-            <span class="spanLeft">
-                <a href="#"><i class="fa-solid fa-location-dot"></i> 25 de Mayo 22, San Miguel de Tucumán</a> - 
-                <i class="fa-solid fa-phone"></i> +54 (0381) 431-4200
-            </span>
-            <span class="spanRight">
+        <div class="containerHeader">            
+            <span class="spanLeft-header">
+                <div class="address-header">
+                    <a href="#"><i class="fa-solid fa-location-dot"></i> 25 de Mayo 22, San Miguel de Tucumán</a>  
+                </div>
+                <div class="phone-header">
+                    <i class="fa-solid fa-phone"></i> +54 (0381) 431-4200
+                </div>
+            </span>                        
+            <span class="spanRight-header">
                 <span class="header-link-socialNetwork">
                     <a href="#"><i class="fa-brands fa-whatsapp fa-lg"></i></a>
                 </span>
@@ -534,7 +538,7 @@
                                 <a href="#"><i class="fa-brands fa-youtube fa-lg"></i></a>
                             </span>                    
                             <span class="footer-link-socialNetwork">
-                                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                                <a href="#"><i class="fa-brands fa-tiktok fa-lg"></i></a>
                             </span>
                         </span>
                         <div class="address-info-footer">
@@ -580,8 +584,7 @@
                                 <input type="submit" name="" id="" class="input-submit-footer" value="Suscribise">
                             </div>
                         </form>
-                    </div>
-                     
+                    </div>                     
                 </div>
             </span>
         </div>
