Modificación login.html
Agragación de id="panelLogin" a la etiqueta <section>

--- a/pages/login.html
+++ b/pages/login.html
@@ -79,7 +79,7 @@
 
     <main class="container-main">
         <!-- SECTION LOGIN USER-->
-        <section class="container-panel-login">   
+        <section id="panelLogin" class="container-panel-login">   
             <div class="panel-login">
                 <div class="panel-title-login borderBottom font1">Iniciar Sesion</div>    
                 <div class="panel-form-login">
@@ -119,8 +119,7 @@
                 <div class="panel-register-login">
                     <a href="">¿Olvidaste tu usuario y contraseña?</a>
                 </div>
-            </div>
-            
+            </div>            
         </section>
     </main>
     <!-- FOOTER -->
