--- a/pages/login.html
+++ b/pages/login.html
@@ -88,7 +88,7 @@
                             <label for="">Usuario</label>
                         </div>
                         <div class="panel-input-login">
-                            <input type="text" name="user" id="user" class="input-login">
+                            <input type="text" name="user" id="user" class="input-login" placeholder="Usuario o Email">
                         </div>
                         <div id="userMsg" class="userValidation-Msg">
                             Ingrese un usuario valido.
@@ -97,7 +97,7 @@
                             <label for="">Password</label>
                         </div>
                         <div class="panel-input-login">
-                            <input type="password" name="pass" id="pass" class="input-login">
+                            <input type="password" name="pass" id="pass" class="input-login" placeholder="Contraseña o Password">
                         </div>
                         <div id="passMsg" class="passValidation-Msg">
                             Ingrese una contraseña valida.
