Actualización de input login
Se coloca en los placeHolder de los inputs user y pass, los datos "admin123" tanto de usuario como de contraseña para logueo de usuario con datos chequeados. 
En caso de no ingresar los datos correctamente se genera un alert con un mensaje de datos mal ingresados.

--- a/pages/login.html
+++ b/pages/login.html
@@ -88,7 +88,7 @@
                             <label for="">Usuario</label>
                         </div>
                         <div class="panel-input-login">
-                            <input type="text" name="user" id="user" class="input-login" placeholder="Usuario o Email">
+                            <input type="text" name="user" id="user" class="input-login" placeholder="user: admin123">
                         </div>
                         <div id="userMsg" class="userValidation-Msg">
                             Ingrese un usuario valido.
@@ -97,7 +97,7 @@
                             <label for="">Password</label>
                         </div>
                         <div class="panel-input-login">
-                            <input type="password" name="pass" id="pass" class="input-login" placeholder="Contraseña o Password">
+                            <input type="password" name="pass" id="pass" class="input-login" placeholder="Contraseña: admin123">
                         </div>
                         <div id="passMsg" class="passValidation-Msg">
                             Ingrese una contraseña valida.
